--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "eslint": "^4.3.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.0.0"
+    "eslint-plugin-react": "7.0.0"
   }
 }
