--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "eslint": "^4.3.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "7.0.0"
+    "eslint-plugin-react": "7.0.0",
+    "eslint-plugin-jest": "^20.0.3"
   },
   "devDependencies": {
-    "eslint": "^4.3.0",
-    "eslint-plugin-jest": "^20.0.3"
+    "eslint": "^4.3.0"
   }
 }
