--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.1.3",
+  "version": "1.1.4",
   "name": "@telusdigital/eslint-config",
-  "description": "Provides TELUS's `.eslintrc` as an extensible shared config",
+  "description": "TELUS Flavour ESLint config",
   "homepage": "https://github.com/telusdigital/eslint-config",
   "repository": {
     "type": "git",
@@ -18,11 +18,10 @@
     "styleguide"
   ],
   "engines": {
-    "node": ">=4"
+    "node": ">=8"
   },
   "files": [
-    "index.js",
-    ".eslintrc"
+    "index.js"
   ],
   "bugs": {
     "url": "https://github.com/telusdigital/eslint-config/issues"
@@ -31,13 +30,10 @@
     "eslint-config-airbnb": "^16.0.0"
   },
   "peerDependencies": {
-    "eslint": "^4.8.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0",
-    "eslint-plugin-jest": "^20.0.3"
-  },
-  "devDependencies": {
-    "eslint": "^4.8.0"
+    "eslint": "^4.10.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jest": "^21.2.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0"
   }
 }
