--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "peerDependencies": {
     "eslint": "^5.7.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jest": "21.24.1",
     "eslint-plugin-jsx-a11y": "^6.1.2",
