--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -32,7 +32,8 @@ branches:
       required_status_checks:
         strict: true
         contexts:
-          - 'ci/circleci: Build Error'
+          - 'ci/circleci: build',
+          - 'ci/circleci: lint'
 
       enforce_admins: true
 
