--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.3",
+  "version": "0.0.0-development",
   "name": "@telus/eslint-config",
   "description": "TELUS Flavour ESLint config",
   "homepage": "https://github.com/telus/eslint-config",
