--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
   },
   "scripts": {
     "postinstall": "npx install-group peer --package @telus/eslint-config --global",
-    "lint:deps": "npx david --error404 --errorSCM --errorDepType",
+    "lint:deps": "npx updated",
     "lint:ec": "npx editorconfig-checker .",
     "lint:js": "npx eslint .",
     "lint:md": "npx remark --quiet --frail .",
     "lint": "npx npm-run-all -p lint:*"
   },
   "peerDependencies": {
-    "eslint": "^5.7.0",
+    "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jest": "21.27.1",
+    "eslint-plugin-jest": "22.0.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1"
   }
